Rearranged some things and added a little so we can start testing the links, routes, and handlebar stuff.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
     </div>
   </main>
   {{#if loggedIn}}
-  <script src="/movie-reviews/public/js/login.js"></script>
+  <script src="../../public/js/login.js"></script>
   {{/if}}
 </body>
 
