--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -37,4 +37,4 @@
   </div>
 </div>
 
-<script src="/group-project2/movie-reviews/public/js/login.js"></script>
+<script src="../../public/js/login.js"></script>
