--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,27 @@ body{
     font-size: 14px;
     color: rgb(146, 146, 146);
 }
+#login-block{
+    margin: auto;
+    margin-top: 200px;
+    border: 2px solid rgb(146, 146, 146);
+    border-radius: 10px;
+}
+#p-tag-or{
+    margin-left: 130px;
+    margin-right: 105px;
+}
+.form-button{
+    color: white;
+    background-color: rgb(56, 126, 255);
+    margin-top: 20px;
+    border: 1px solid;
+    border-radius: 15px;
+    padding: 6px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.p-tag-login{
+    font-size: x-large;
+    padding-top: 10px;
+}
