--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -74,19 +74,19 @@ Aidens login html code
             </div>
             <div class="container d-flex">
                 <form class="p-3 me-5">
-                    <label for="uername">Username:</label><br>
-                    <input type="text" id="uername" name="uername" value=""><br>
-                    <label for="password">Password:</label><br>
-                    <input type="password" id="password" name="password" value=""><br>
+                    <label for="username_login">Username:</label><br>
+                    <input type="text" id="username_login" name="username" autocomplete="username" value=""><br>
+                    <label for="password_login">Password:</label><br>
+                    <input type="password" id="password_login" name="password" autocomplete="current-password" value=""><br>
                     <input class="form-button" type="submit" value="Login">
                 </form>
                 <form class="p-3 ms-5">
-                    <label for="uername">Username:</label><br>
-                    <input type="text" id="uername" name="uername" value=""><br>
+                    <label for="username_signup">Username:</label><br>
+                    <input type="text" id="username_signup" name="username" autocomplete="off" value=""><br>
                     <label for="email">Email:</label><br>
-                    <input type="text" id="email" name="email" value=""><br>
-                    <label for="password">Password:</label><br>
-                    <input type="password" id="password" name="password" value=""><br>
+                    <input type="text" id="email" name="email" autocomplete="email" value=""><br>
+                    <label for="password_signup">Password:</label><br>
+                    <input type="password" id="password_signup" name="password" autocomplete="off" value=""><br>
                     <input class="form-button" type="submit" value="Signup">
                 </form>
             </div>
