--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,3 +59,18 @@ body{
 .movie-card-p{
     padding-left: 14px;
 }
+#movie-page-poster{
+    height: 450px;
+    width: auto;
+    margin-top: 50px;
+}
+#movie-page-title{
+    margin-top: 50px;
+}
+#movie-page-p{
+    margin-top: 30px;
+    margin-right: 20px;
+}
+#reviews{
+    margin-top: 50px;
+}
