--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -73,14 +73,14 @@ Aidens login html code
                 <p class="p-tag-login">Signup</p>
             </div>
             <div class="container d-flex">
-                <form class="p-3 me-5">
+                <form class="p-3 me-5 login-form">
                     <label for="username_login">Username:</label><br>
                     <input type="text" id="username_login" name="username" autocomplete="username" value=""><br>
                     <label for="password_login">Password:</label><br>
                     <input type="password" id="password_login" name="password" autocomplete="current-password" value=""><br>
                     <input class="form-button" type="submit" value="Login">
                 </form>
-                <form class="p-3 ms-5">
+                <form class="p-3 ms-5 signup-form">
                     <label for="username_signup">Username:</label><br>
                     <input type="text" id="username_signup" name="username" autocomplete="off" value=""><br>
                     <label for="email">Email:</label><br>
@@ -100,7 +100,7 @@ Aidens login html code
 
 
 
-
+    <script src="/js/login.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
