added profile page html and styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,3 +118,7 @@ body{
     padding-left: 15px;
     padding-right: 15px;
 }
+#profile-page-top{
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
