--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,8 @@
-{{!-- 
+{{!--
+
 
 Aidens login html code
+
 
 <div class="row justify-space-between-md">
   <div class="login-card">
@@ -39,10 +41,13 @@ Aidens login html code
       </div>
     </form>
   </div>
-</div>
+</div> --}}
 
-<script src="../../public/js/login.js"></script>
- --}}
+
+{{!-- <script src="../public/js/login.js"></script> --}}
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -57,12 +62,13 @@ Aidens login html code
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous"
-  /> 
+  />
   <link
     rel="stylesheet"
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
   />
 </head>
+
 
 <body class="bg-light">
     <main class="container d-flex justify-content-center align-content-center">
@@ -73,20 +79,20 @@ Aidens login html code
                 <p class="p-tag-login">Signup</p>
             </div>
             <div class="container d-flex">
-                <form class="p-3 me-5">
-                    <label for="username_login">Username:</label><br>
-                    <input type="text" id="username_login" name="username" autocomplete="username" value=""><br>
+                <form class="p-3 me-5" id="login-form">
+                    <label for="username_login">Email:</label><br>
+                    <input type="text" id="email-login" name="email" autocomplete="email" value=""><br>
                     <label for="password_login">Password:</label><br>
-                    <input type="password" id="password_login" name="password" autocomplete="current-password" value=""><br>
+                    <input type="password" id="password-login" name="password" autocomplete="current-password" value=""><br>
                     <input class="form-button" type="submit" value="Login">
                 </form>
-                <form class="p-3 ms-5">
+                <form class="p-3 ms-5" id="signup-form">
                     <label for="username_signup">Username:</label><br>
-                    <input type="text" id="username_signup" name="username" autocomplete="off" value=""><br>
+                    <input type="text" id="username-signup" name="username" autocomplete="off" value=""><br>
                     <label for="email">Email:</label><br>
-                    <input type="text" id="email" name="email" autocomplete="email" value=""><br>
+                    <input type="text" id="email-signup" name="email" autocomplete="email" value=""><br>
                     <label for="password_signup">Password:</label><br>
-                    <input type="password" id="password_signup" name="password" autocomplete="off" value=""><br>
+                    <input type="password" id="password-signup" name="password" autocomplete="off" value=""><br>
                     <input class="form-button" type="submit" value="Signup">
                 </form>
             </div>
@@ -101,6 +107,14 @@ Aidens login html code
 
 
 
+
+
+
+
+
+
+
+  <script src="/js/login.js"> type="text/javascript" </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
