--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,13 +10,17 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  /> 
-  <link
+    crossorigin="anonymous"/> 
+    <link
     rel="stylesheet"
-    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-  />
+    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+{{#each movies as |movie|}}
+
+<p>{{movie.title}}</p>
+
+{{/each}}  
 <body class="bg-light">
     <header class="p-3 bg-dark text-white">
         <div class="container">
@@ -60,13 +64,6 @@
             </div>
         </div>
     </header>
-
-    {{#each movies as |movie|}}
-
-        <p>{{movie.title}}</p>
-
-    {{/each}}   
-
     <main class="container">
         <div class="container">
             <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies">
@@ -93,40 +90,49 @@
                 <h4 class=" ml-0 pl-0 col-3">Popular Reviews</h4>
             </div>
             <div>
-                <div class="bg-white popular-reviews container mb-5">
+                <div class="bg-white popular-reviews container mb-3">
                     <h4 class="row pl-3 pt-3">Movie Name</h4>
                     <h4 class="row pl-3 pt-1">9.2/10</h4>  
                     <h3 class="row pl-3 pt-3">This movie is great!</h4>
                     <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <p class="user-signature">-User 1234</p>
+                    <div>
+                       <p class="user-signature">-User 1234</p>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                    </div>
                 </div>
-                <div class="bg-white popular-reviews container mb-5">
+                <div class="bg-white popular-reviews container mb-3">
                     <h4 class="row pl-3 pt-3">Movie Name</h4>
                     <h4 class="row pl-3 pt-1">9.2/10</h4>  
                     <h3 class="row pl-3 pt-3">This movie is great!</h4>
                     <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <p class="user-signature">-User 1234</p>
+                    <div>
+                       <p class="user-signature">-User 1234</p>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                    </div>
                 </div>
-                <div class="bg-white popular-reviews container mb-5">
+                <div class="bg-white popular-reviews container mb-3">
                     <h4 class="row pl-3 pt-3">Movie Name</h4>
                     <h4 class="row pl-3 pt-1">9.2/10</h4>  
                     <h3 class="row pl-3 pt-3">This movie is great!</h4>
                     <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <p class="user-signature">-User 1234</p>
+                    <div>
+                       <p class="user-signature">-User 1234</p>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                    </div>
                 </div>
-                <div class="bg-white popular-reviews container mb-5">
+                <div class="bg-white popular-reviews container mb-3">
                     <h4 class="row pl-3 pt-3">Movie Name</h4>
                     <h4 class="row pl-3 pt-1">9.2/10</h4>  
                     <h3 class="row pl-3 pt-3">This movie is great!</h4>
                     <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <p class="user-signature">-User 1234</p>
-                </div>
-                <div class="bg-white popular-reviews container mb-5">
-                    <h4 class="row pl-3 pt-3">Movie Name</h4>
-                    <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                    <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                    <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <p class="user-signature">-User 1234</p>
+                    <div>
+                       <p class="user-signature">-User 1234</p>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
