Added seed data for reviews and adjusted the home-routes to test get and post to reviews. Started adjusting some handlebars to be able to test forms.

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -81,40 +81,26 @@ Aidens login html code
             <div class="container d-flex">
 
                 <form class="p-3 me-5" id="login-form">
-                    <label for="username_login">Email:</label><br>
+                    <label for="email-login">Email:</label><br>
                     <input type="text" id="email-login" name="email" autocomplete="email" value=""><br>
 
-                    <label for="password_login">Password:</label><br>
+                    <label for="password-login">Password:</label><br>
                     <input type="password" id="password-login" name="password" autocomplete="current-password" value=""><br>
                     <input class="form-button" type="submit" value="Login">
                 </form>
 
                 <form class="p-3 ms-5" id="signup-form">
-                    <label for="username_signup">Username:</label><br>
+                    <label for="username-signup">Username:</label><br>
                     <input type="text" id="username-signup" name="username" autocomplete="off" value=""><br>
-                    <label for="email">Email:</label><br>
+                    <label for="email-signup">Email:</label><br>
                     <input type="text" id="email-signup" name="email" autocomplete="email" value=""><br>
-                    <label for="password_signup">Password:</label><br>
+                    <label for="password-signup">Password:</label><br>
                     <input type="password" id="password-signup" name="password" autocomplete="off" value=""><br>
                     <input class="form-button" type="submit" value="Signup">
                 </form>
             </div>
         </div>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
