continued reworking routes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,8 @@
-{{!-- 
+{{!--
+
 
 Aidens login html code
+
 
 <div class="row justify-space-between-md">
   <div class="login-card">
@@ -43,6 +45,13 @@ Aidens login html code
 
 {{!-- <script src="../public/js/login.js"></script> --}}
 
+{{!-- </div>  --}}
+
+
+{{!-- <script src="../public/js/login.js"></script> --}}
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -57,12 +66,13 @@ Aidens login html code
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous"
-  /> 
+  />
   <link
     rel="stylesheet"
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
   />
 </head>
+
 
 <body class="bg-light">
     <main class="container d-flex justify-content-center align-content-center">
