--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,3 +74,51 @@ body{
 #reviews{
     margin-top: 50px;
 }
+#post-movie-title{
+    margin-top: 30px;
+}
+#username-review{
+    margin-top: 30px;
+}
+#review-title{
+    padding: 10px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+}
+#review-score{
+    width: 35px;
+    height: 30px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+#review-comments{
+    padding: 10px;
+    width: 100%;
+    height: 300px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+.review-form-button{
+    background-color: rgb(255, 255, 255);
+    margin-top: 10px;
+    border: 2px solid;
+    border-radius: 10px;
+    padding: 6px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.cancel-button{
+    color: white;
+    background-color: rgb(85, 85, 85);
+    margin-top: 10px;
+    border: 2px solid;
+    border-radius: 10px;
+    padding: 6px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+#profile-page-top{
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
