--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,9 +16,11 @@
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-{{#each movies as |movie|}}
+{{#each reviews as |review|}}
 
-<p>{{movie.title}}</p>
+<p>Movie Title: {{review.title}}</p>
+<p>Review Author: {{review.author_id}}</p>
+<p>Review: {{review.content}}</p>
 
 {{/each}}  
 <body class="bg-light">
@@ -71,6 +73,9 @@
                 <button type="submit" class="col-12 ml-5 rounded" justify-content="center">Search</button>
             </form>
             {{!-- <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies"> --}}
+        </div>
+        <div class="container mt-4">
+            <div id="results" class="text-center"></div>
         </div>
         <div class="container mt-4 text-center">
             <div class="row mb-4">
@@ -145,7 +150,7 @@
 
 
 
-
+    <script src="/js/search-results.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
