--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,8 +45,11 @@ body{
     font-size: x-large;
     padding-top: 10px;
 }
+.movie-results{
+    padding-left: 100px;
+}
 .movie-card{
-    border-top: 2px solid rgb(146, 146, 146);
+    padding-bottom: 50px;
 }
 .movie-card-poster{
     height: 150px;
@@ -58,6 +61,12 @@ body{
 }
 .movie-card-p{
     padding-left: 14px;
+}
+.movie-card-h4{
+    padding-left: 20px;
+    width: 20%;
+    text-decoration: none;
+    font-size: x-large;
 }
 #movie-page-poster{
     height: 450px;
