--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,76 +60,12 @@
         </div>
     </header>
     <main class="container">
-        <div class="container" >
-            <form id="search-form" action="/search-results" method="get">
-                <input type="text" id="title" class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
-                <button type="submit" class="col-12 ml-5 rounded" justify-content="center">Search</button>
-            </form>
-            {{!-- <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies"> --}}
-        </div>
-        <div class="container mt-4">
-            <div id="results" class="text-center"></div>
-        </div>
-        <div class="container mt-5">
-            <div class="row mb-4">
-                <h4 class=" ml-0 pl-0 col-3">Popular Reviews</h4>
-            </div>
-            <div>
-                <div class="bg-white popular-reviews container mb-3">
-                  {{#each reviews as |review|}}
-
-                    <h4 class="row pl-3 pt-3">{{review.title}}</h4>
-                    <h4 class="row pl-3 pt-1">9.2/10</h4> 
-                    <p class="row pl-3 pt-3">{{review.content}}</p>
-
-                    <div>
-                       <p class="user-signature">-{{user.username}}</p>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                    </div>
-                  {{/each}} 
-                </div>
-                <div class="bg-white popular-reviews container mb-3">
-                    <h4 class="row pl-3 pt-3">Movie Name</h4>
-                    <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                    <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                    <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <div>
-                       <p class="user-signature">-User 1234</p>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                    </div>
-                </div>
-                <div class="bg-white popular-reviews container mb-3">
-                    <h4 class="row pl-3 pt-3">Movie Name</h4>
-                    <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                    <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                    <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <div>
-                       <p class="user-signature">-User 1234</p>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                    </div>
-                </div>
-                <div class="bg-white popular-reviews container mb-3">
-                    <h4 class="row pl-3 pt-3">Movie Name</h4>
-                    <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                    <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                    <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                    <div>
-                       <p class="user-signature">-User 1234</p>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {{{body}}}
 
     </main>
 
 
 
-    <script src="/js/search-results.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
