--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+{{{body}}}
 <body class="bg-light">
     <header class="p-3 bg-dark text-white">
         <div class="container">
@@ -55,7 +56,14 @@
                           </div>
                     </li>
                 </ul>
-                    <a href="/" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">My Profile</a>
+                {{#if loggedIn}}
+    <button id="logout" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">Logout</button>
+    {{else}}
+
+    <a href="/login">Login</a>
+    
+    {{/if}}
+          {{!-- <a href="/" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">My Profile</a> --}}
             </div>
         </div>
     </header>
@@ -129,7 +137,7 @@
 
 
 
-    <script src="/js/search-results.js" type="text/javascript"></script>
+    {{!-- <script src="/js/search-results.js" type="text/javascript"></script> --}}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
