--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -56,8 +56,8 @@ Aidens login html code
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reel Insights Login</title>
-    <link rel="stylesheet" href="../css/jass.css" />    
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/jass.css" />    
+    <link rel="stylesheet" href="/css/style.css" />
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -72,6 +72,7 @@ Aidens login html code
 
 
 <body class="bg-light">
+  
     <main class="container d-flex justify-content-center align-content-center">
         <div id="login-block">    
             <div class="d-flex flex-wrap align-items-center justify-content-center">
@@ -105,7 +106,7 @@ Aidens login html code
     </main>
 
 
-    <script src="/js/login.js"> type="text/javascript" </script>
+    {{!-- <script src="/js/login.js"> type="text/javascript" </script> --}}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
