--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-light">
 
-    <header class="p-3 bg-dark text-white">
+    {{!-- <header class="p-3 bg-dark text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center fs-4 mb-2 mb-lg-0 mr-5 text-white text-decoration-none">Reel Insights</a>
@@ -59,7 +59,7 @@
                     
             </div>
         </div>
-    </header>
+    </header> --}}
 
     <main class="container">
         <div class="container" >
