--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,7 +59,7 @@
     <button id="logout" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">Logout</button>
     {{else}}
 
-    <a href="/login">Login</a>
+    <a class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white" href="/login">Login</a>
     
     {{/if}}
           {{!-- <a href="/" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">My Profile</a> --}}
