--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -63,9 +63,9 @@
     
     <main class="container">
         <div class="container" >
-            <form id="search-form" action="/search-results" method="get">
-                <input type="text" id="title" class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
-                <button type="submit" class="col-12 ml-5 rounded" justify-content="center">Search</button>
+            <form id="search-form">
+                <input type="text" id="title" action="/search-results"  class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
+                <button type="submit"  class="col-12 ml-5 rounded" href="/search-results" justify-content="center">Search</button>
             </form>
             {{!-- <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies"> --}}
         </div>
@@ -76,6 +76,7 @@
             <div class="row mb-4">
                 <h4 class=" ml-0 pl-0 col-3">Popular Reviews</h4>
             </div>
+
             <div>
                 <div class="bg-white popular-reviews container mb-3">
                   {{#each reviews as |review|}}
@@ -91,7 +92,8 @@
                     </div>
                   {{/each}} 
                 </div>
-                <div class="bg-white popular-reviews container mb-3">
+
+                {{!-- <div class="bg-white popular-reviews container mb-3">
                     <h4 class="row pl-3 pt-3">Movie Name</h4>
                     <h4 class="row pl-3 pt-1">9.2/10</h4>  
                     <h3 class="row pl-3 pt-3">This movie is great!</h4>
@@ -121,7 +123,7 @@
                     <div>
                        <p class="user-signature">-User 1234</p>
                        <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                       <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button> --}}
                     </div>
                 </div>
             </div>
@@ -129,7 +131,7 @@
 
     </main>
 
-
+    <script src="/js/search-results.js" type="text/javascript"></script>
     <script src="/js/home-search.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
