--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,38 +22,16 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center fs-4 mb-2 mb-lg-0 mr-5 text-white text-decoration-none">Reel Insights</a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    {{!-- <li>
+                   <li>
                         <a href="/" class="nav-link px-4 text-white">Home</a>
                     </li>
                     <li>
-                        <a href="/" class="nav-link px-4 text-white">About</a>
+                        <a href="/" method="get" class="nav-link px-4 text-white">About</a>
                     </li>
-                    <li>
-                        <button type="button" class="btn btn-primary mx-4" data-toggle="modal" data-target="#exampleModal">
-                            Contact
-                          </button>
-                          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p class="text-dark">Send us a message:</p>
-                                    <form>
-                                          <textarea class="form-control" id="message-text"></textarea>
-                                      </form>
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                    </li> --}}
+                      <li>
+                        <a href="/post-page" class="nav-link px-4 text-white">Post A Review</a>
+                    </li>
+
                 </ul>
                 {{#if loggedIn}}
 
