fixing up search pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,9 @@
                       <li>
                         <a href="/post-page" class="nav-link px-4 text-white">Post A Review</a>
                     </li>
-
+                    <li>
+                        <a href="/search-results" class="nav-link px-4 text-white">Seach A Movie</a>
+                    </li>
                 </ul>
                 {{#if loggedIn}}
 
