--- a/views/search-results.handlebars
+++ b/views/search-results.handlebars
@@ -21,7 +21,15 @@
   />
 </head>
 <body class="bg-light">
-    <main>
+
+
+{{!-- USING HOMEPAGE-SEARCH.JS LOGIC --}}
+<form id="search-form">
+        <input type="text" id="title" class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
+         <button type="submit"  class="col-12 ml-5 rounded" justify-content="center">Search</button>
+    </form>
+
+    {{!-- <main>
         <div class="container d-flex justify-content-center">
             <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies">
         </div>
@@ -36,14 +44,15 @@
             <p>{{error}}</p>
             {{else}}
             <h2>{{title}} ({{year}})</h2>
-            <p><strong>Director:</strong> {{director}}</p>
-            <p><strong>Plot:</strong> {{plot}}</p>
+            <p><strong>{{director}}</strong> </p>
+            {{!-- Note to self, make pretty --}}
+            <p><strong>{{plot}}</strong> </p>
             <img src="{{poster}}" alt="{{title}} Poster" style="width:200px;">
             {{/if}}
-        </div>
+        </div> --}}
     </main>
 
-    <script src="/public/js/search-results.js" type="text/javascript"></script>
+    <script src="/movie-reviews/public/js/home-search.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
