--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,14 +35,11 @@
                         <a href="/search-results" class="nav-link px-4 text-white">Seach A Movie</a>
                     </li>
                 </ul>
-                {{#if loggedIn}}
-
-    <button id="logout" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">Logout</button>
-    {{else}}
-
-    <a class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white" href="/login">Login</a>
-    
-    {{/if}}
+                {{#if session.logged_in}}
+                    <button id="logout" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">Logout</button>
+                    {{else}}
+                        <a class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white" href="/login">Login</a>
+                {{/if}}
           {{!-- <a href="/" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">My Profile</a> --}}
             </div>
         </div>
