Removed search from homepage.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,16 +20,16 @@
 <body class="bg-light">  
 
     <main class="container">
-        <div class="container" >
+        {{!-- <div class="container" >
             <form id="search-form">
                 <input type="text" id="title" action="/search-results"  class="col-12 mt-5 ml-5 mr-5 rounded" placeholder="Enter movie title">
                 <button type="submit"  class="col-12 ml-5 rounded" href="/search-results" justify-content="center">Search</button>
 
             </form>
-        </div>
-        <div class="container mt-4">
+        </div> --}}
+        {{!-- <div class="container mt-4">
             <div id="results" class="text-center"></div>
-        </div>
+        </div> --}}
 
         {{!-- REVIEWS START --}}
         <div class="container mt-5">
